--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 				<a href="http://www.nytimes.com/pages/t-magazine/" target="_blank" class="im"><img src="images/times-logo.png" alt="The New York Times Style"></a>
 
-				<a href="http://www.sedonamonthly.com" target="_blank" class="im"><img src="images/sedona-logo.png" alt="Sedona Monthly"></a>
+				<a href="http://www.sedonamonthly.com" target="_blank" ><img src="images/sedona-logo.png" alt="Sedona Monthly" class="im"></a>
 
 				<a href="http://www.bergdorfgoodman.com/" target="_blank"><img src="images/bergdorf-logo.png" alt="Begdorf Goodman"></a>
 
